--- a/conf/vhost.conf
+++ b/conf/vhost.conf
@@ -15,7 +15,7 @@ server {
             proxy_set_header Connection "Upgrade";
         }
 
-        location /api/ {
+        location /srv/ {
             proxy_pass http://php:8080/;
             proxy_set_header Host localhost;
         }
